# colfer-rs

./: Cargo.toml  Readme.md
.github/workflows/: Release.yml
colfer-build/: Cargo.toml
colfer-build/src/: ast.rs  config.rs  generator.rs  lib.rs  parser.rs
example/: Cargo.toml  bench.colf  bench.proto  build.rs  test.colf
example/src/: bench_colfer.rs  bench_pb.rs  gen.rs  main.rs
src/: datetime.rs  lib.rs  types.rs
