[package]
name = "colfer"
version = "0.1.0"
authors = ["Sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
chrono = { version = "0.4.19", optional = true }

[dev-dependencies]
colfer-build = { path = "colfer-build", version = "0.1.0" }

[workspace]
members = [
    "colfer-build",
    "example"
]
